--- a/src/styles/machine.css
+++ b/src/styles/machine.css
@@ -21,6 +21,7 @@
 .machine-page.machine-mode .machine-control-display {
   width: 28%;
   background-color: var(--background-secondary);
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
 }
 
 /** control mode */
@@ -31,6 +32,20 @@
 .machine-page.control-mode .machine-control-display {
   width: 70%;
   background-color: var(--background-primary);
+}
+
+/** scroll bar styling */
+.machine-page.control-mode .dialogue-column-wrapper::-webkit-scrollbar,
+.machine-page.control-mode .dialogue-column-wrapper::-webkit-scrollbar-track,
+.machine-page.control-mode .machine-control-display::-webkit-scrollbar,
+.machine-page.control-mode .machine-control-display::-webkit-scrollbar-track {
+  background: var(--scrollbar-track);
+}
+
+
+.machine-page.control-mode .dialogue-column-wrapper::-webkit-scrollbar-thumb,
+.machine-page.control-mode .machine-control-display::-webkit-scrollbar-thumb {
+  background: initial;
 }
 
 /** MIDDLE TOGGLE */
@@ -56,7 +71,7 @@
   min-width: 24px;
 }
 
-/** KK: currently not working :( */
+/** KK: currently not working :( should make icon disappear if it shrinks past a certain size */
 @container (max-inline-size: 30px) {
   .toggle-icon { display: none; }
 }
@@ -138,6 +153,7 @@
   overflow-y: auto;
   padding: 1rem;
   box-sizing: border-box;
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
 }
 
 /** RIGHT PANEL: machine image generation */
